<resources>
    <string name="app_name">Flappy-Street</string>
    <string name="go">Go!</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="name">name</string>
    <string name="choose_name">Choose your name:</string>
    <string name="choose_sprite">Choose your sprite:</string>
    <string name="choose_difficulty">Choose your difficulty:</string>
    <string name="game_screen">Game Screen</string>
    <string name="welcome">Welcome </string>
    <string name="starting_points">Points: </string>
    <string name="high_score">High Score: </string>
    <string name="lives">Lives: </string>
    <string name="difficulty">Difficulty: </string>
    <string name="back">Back</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="game_over">Game Over</string>
    <string name="restart">Restart</string>
    <string name="config">Config</string>
</resources>