<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:autofillHints="false"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:hint="@string/choose_name"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/choose_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/choose_sprite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <ImageButton
        android:id="@+id/spriteChoice2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="36dp"
        android:background="@null"
        android:src="@drawable/sprite2"
        app:layout_constraintBottom_toBottomOf="@+id/spriteChoice1"
        app:layout_constraintEnd_toStartOf="@+id/spriteChoice3"
        app:layout_constraintStart_toEndOf="@+id/spriteChoice1"
        app:layout_constraintTop_toTopOf="@+id/spriteChoice1" />

    <ImageButton
        android:id="@+id/spriteChoice1"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="83dp"
        android:background="@null"
        android:src="@drawable/sprite1"
        app:layout_constraintBottom_toTopOf="@+id/easyButton"
        app:layout_constraintEnd_toStartOf="@+id/spriteChoice2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/spriteChoice3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="12dp"
        android:background="@null"
        android:src="@drawable/sprite3"
        app:layout_constraintBottom_toBottomOf="@+id/spriteChoice2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spriteChoice2"
        app:layout_constraintTop_toTopOf="@+id/spriteChoice2" />

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="65dp"
        android:text="@string/go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="254dp"
        android:text="@string/choose_difficulty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="5dp"
        android:text="@string/medium"
        app:layout_constraintEnd_toStartOf="@+id/hardButton"
        app:layout_constraintStart_toEndOf="@+id/easyButton"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/easyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/easy"
        app:layout_constraintBaseline_toBaselineOf="@+id/mediumButton"
        app:layout_constraintEnd_toStartOf="@+id/mediumButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/hardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hard"
        app:layout_constraintBaseline_toBaselineOf="@+id/mediumButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mediumButton" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:text="@string/back"
        app:layout_constraintBaseline_toBaselineOf="@+id/goButton"
        app:layout_constraintEnd_toStartOf="@+id/hardButton"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
