<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="126dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="123dp"
        android:fontFamily="monospace"
        android:text="@string/game_over"
        android:textColor="#50C878"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/displayStartingPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/displayHighScore"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="176dp"
        android:fontFamily="monospace"
        android:text="@string/starting_points"
        android:textColor="#FFBB86FC"
        android:textColorHint="#808080"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/displayHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="174dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="monospace"
        android:text="@string/high_score"
        android:textColor="#FFBB86FC"
        android:textColorHint="#808080"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/RestartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/displayStartingPoints"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="20dp"
        android:text="@string/restart" />

    <Button
        android:id="@+id/ConfigButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RestartButton"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="20dp"
        android:text="@string/config" />


</RelativeLayout>