<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Comment this constraint layout out if you want to
         edit the rest of the layout: this breaks the preview -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.flappy_street.levels.GameLevel
            android:id="@+id/gameLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/gameLevel"
            app:layout_constraintBottom_toBottomOf="@id/gameLevel"
            app:layout_constraintRight_toRightOf="@id/gameLevel"
            app:layout_constraintLeft_toLeftOf="@id/gameLevel">

            <com.example.flappy_street.game.Player
                android:id="@+id/player"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom|center"
                android:contentDescription="@string/choose_sprite"
                app:srcCompat="@drawable/sprite1"/>

        </FrameLayout>
        <com.example.flappy_street.obstacles.VehicleRow
            android:id="@+id/carRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.example.flappy_street.obstacles.VehicleRow
            android:id="@+id/truckRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.example.flappy_street.obstacles.VehicleRow
            android:id="@+id/semiRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/moveUP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/up" />

        <Button
            android:id="@+id/moveDOWN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/down" />

        <Button
            android:id="@+id/moveLEFT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/left" />

        <Button
            android:id="@+id/moveRIGHT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/right" />


    </GridLayout>

    <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"

        android:columnCount="5"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/displayPlayerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:fontFamily="monospace"
            android:text="Name"
            android:textColor="#FF0000"
            android:textColorHint="#808080"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/displayStartingLives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="4"
            android:fontFamily="monospace"
            android:text="@string/lives"
            android:textColor="#FFBB86FC"
            android:textColorHint="#808080"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/displayStartingPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="4"
            android:fontFamily="monospace"
            android:text="@string/starting_points"
            android:textColor="#FFBB86FC"
            android:textColorHint="#808080"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/displayHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:fontFamily="monospace"
            android:text="@string/high_score"
            android:textColor="#FFBB86FC"
            android:textColorHint="#808080"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>